# View3D

./: CMakeLists.txt  README.md
include/: asset_manager.hpp  buffer.hpp  camera.hpp  controller.hpp  light.hpp  mesh.hpp  object.hpp  platform.hpp  renderer.hpp  resources.hpp  scene.hpp  shader.hpp  transform.hpp  view3d.hpp
include/view3d/: controller.hpp  mesh.hpp  platform.hpp  renderer.hpp  resources.hpp  shader.hpp  view.hpp
include/view3d/misc/: smart_ptr_hash.hpp
share/shaders/: basic_fragment.glsl  basic_vertex.glsl  grid_frag.glsl  grid_vert.glsl
src/: CMakeLists.txt  asset_manager.cpp  buffer.cpp  controller.cpp  main.cpp  platform.cpp  renderer.cpp  scene.cpp  shader.cpp  view.cpp
